# cpp-primes

./: .gitignore  CMakeLists.txt  Description-Of-Processing.txt  build.bsh  notes.txt  run.bsh
code/incl/: Mutex.h  Process.h  SharedResources.h  Thread.h
code/src/: Process.cpp  Thread.cpp  ThreadFunctions.c  main.cpp
